# esp32s3_lvgl_template

./: .gitignore  ASSIGNMENTS.md  CMakeLists.txt  README.md  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
components/esp_bsp/: CMakeLists.txt  bsp_battery.c  bsp_battery.h  bsp_display.c  bsp_display.h  bsp_i2c.c  bsp_i2c.h  bsp_lvgl.c  bsp_lvgl.h  bsp_sdcard.c  bsp_sdcard.h  bsp_touch.c  bsp_touch.h
components/esp_lcd_jd9853/: CMakeLists.txt
components/esp_lcd_touch_axs5106/: CMakeLists.txt  esp_lcd_touch_axs5106.c
components/esp_lcd_touch_axs5106/include/: esp_lcd_touch_axs5106.h
components/lvgl_ui/: .gitignore  CMakeLists.txt  lvgl_ui.c  lvgl_ui.h
components/lvgl_ui/screens/: scr_home.c  scr_home.h  scr_main.c  scr_main.h  scr_splash.c  scr_splash.h  screens.c  screens.h  screens_timeout.c  screens_timeout.h  screens_update.c  screens_update.h
components/lvgl_ui/ui/: ui.c  ui.h
main/: CMakeLists.txt  main.c
